# financial-wellness-score

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py  model.py
backend/tests/: test_main.py  test_unit_model.py
frontend/: .dockerignore  .prettierrc  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.styles.ts  App.tsx  index.css  types.ts  utils.ts
frontend/src/components/Card/: index.tsx  styles.ts
frontend/src/components/CurrencyInput/: index.tsx  styles.ts
frontend/src/components/Footer/: index.tsx  styles.ts
frontend/src/components/Navbar/: index.tsx  styles.ts
