[tool.poetry]
name = "financial-wellness-score"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley@wesleymendes.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
flake8 = "4.0.1"
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-flake8 = "^1.1.1"
requests = "^2.28.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
